# sphinxcontrib-sass

./: .editorconfig  .gitignore  README.rst  poetry.toml  pyproject.toml  setup.cfg
.github/workflows/: main.yml  release.yml
docs/: conf.py  index.rst
docs/_sass/: custom.scss
sphinxcontrib/: sass.py
tests/: conftest.py  test_it.py
tests/roots/test-default/: conf.py  index.rst  test.scss
