[tool.poetry]
name = "sphinxcontrib-sass"
version = "0.2.4"
description = "Sphinx extension to compile sass to css in running sphinx-build."
authors = ["Kazuya Takei <myself@attakei.net>"]
homepage = "https://github.com/attakei-lab/sphinxcontrib-sass/"
license = "Apache-2.0"
packages = [
    { include = "sphinxcontrib" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Documentation :: Sphinx",
]

[tool.poetry.dependencies]
python = "^3.7 | ^3.8 | ^3.9 | ^3.10"
Sphinx = "*"
libsass = "*"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^3.8.4"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
