[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sphinxcontrib-sass"
version = "0.3.4"
description = "Sphinx extension to compile sass to css in running sphinx-build."
authors = [{name = "Kazuya Takei", email = "myself@attakei.net"}]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Documentation :: Sphinx",
]
dependencies = [
    "Sphinx",
    "libsass",
]

[project.optional-dependencies]
test = [
    "black >=22.3.0,<23",
    "flake8 >=3.8.4,<4",
    "pytest >=6.2.2,<7",
]

[project.urls]
Home = "https://github.com/attakei-lab/sphinxcontrib-sass"
Source = "https://github.com/attakei-lab/sphinxcontrib-sass"

[tool.flit.module]
name = "sphinxcontrib.sass"

[tool.flit.sdist]
exclude = [".github", "docs"]
