[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sphinxcontrib-sass"
version = "0.3.5"
description = "Sphinx extension to compile sass to css in running sphinx-build."
authors = [{name = "Kazuya Takei", email = "myself@attakei.net"}]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation :: Sphinx",
]
requires-python = ">= 3.9"
dependencies = [
    "Sphinx",
    "libsass",
]

[dependency-groups]
dev = [
    {include-group = "test"},
    "packaging>=24.0",
]
test = [
    "black >=22.3.0,<23",
    "flake8 >=3.8.4,<4",
    "pytest >=6.2.2,<7",
]

[project.urls]
Home = "https://github.com/attakei-lab/sphinxcontrib-sass"
Source = "https://github.com/attakei-lab/sphinxcontrib-sass"

[project.optional-dependencies]
dart-sass = [
    "sass-embedded>=0.1.0",
]

[tool.flit.module]
name = "sphinxcontrib.sass"

[tool.flit.sdist]
exclude = [".github"]
